# etherpaddy

./: .gitignore  MANIFEST.in  README.rst  development.ini  production.ini  setup.cfg
doc/: pyramid.wsgi  sample_apache_wsgi.conf
etherpad-lite/static/custom/: pad.js
etherpaddy/: __init__.py  api.py
etherpaddy/models/: model.py
etherpaddy/scripts/: populate.py
etherpaddy/static/css/: default.css  main.css
etherpaddy/static/js/: etherpaddy.js
etherpaddy/templates/: addpad.mako  base.mako  index.mako  padedit.mako  padlist.mako
etherpaddy/views/: views.py
etherpadpadlist/: __init__.py  jsonify.py
etherpadpadlist/models/: __init__.py  model.py
etherpadpadlist/scripts/: populate.py
etherpadpadlist/static/js/: etherpad.js
etherpadpadlist/templates/: base.mako  padlist.mako
etherpadpadlist/views/: views.py
