[metadata]
name = etherpad-padlist
version = 0.1a
author = Majerti
author_email = tech@majerti.fr
keywords = pyramid, scaffold, majerti, web
home_page = '' 
project_url = ''
requires_dist = 
    pyramid 
    SQLAlchemy
    transaction
    pyramid_tm
    pyramid_debugtoolbar
    zope.sqlalchemy
    waitress
requires_python = >=2.7
description_file = README.rst
summary = etherpad-padlist
license = GPLv3
classifier = 
    Development Status :: 1 - Alpha 
    License :: OSI Approved :: GNU General Public License (GPL)
    Intended Audience :: Developers 
    Framework :: Pyramid
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI

[files]
include_package_data = True
zip_safe = False
packages = etherpadpadlist

[specific]
entry_points=
    [paste.app_factory]
    main = etherpadpadlist:main
    [console_scripts]
    populate_etherpad-padlist = etherpadpadlist.scripts.populate:main
test_suite=etherpadpadlist
